--- a/appspec.yml
+++ b/appspec.yml
@@ -2,6 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: .
+    destination: /home/ec2-user/
 hooks:
   ApplicationStart:
     - location: deployment/application_start.sh
