--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ files:
     destination: /home/ec2-user/
 hooks:
   ApplicationStart:
-    - location: deployment/application_start.sh
+    - location: application_start.sh
       timeout: 30
