--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ files:
     destination: /home/ec2-user/
 hooks:
     BeforeInstall:
-    - location: /home/ec2-user/application_start.sh
+    - location: application_start.sh
       runas: root
