--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ files:
     destination: /home/ec2-user/
 hooks:
     BeforeInstall:
-    - location: application_start.sh
+    - docker build -t github_stats .
       runas: root
