updated appspec.yml and added deployment folder

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,4 +5,4 @@ files:
     destination: /home/ec2-user
 hooks:
   ApplicationStart:
-    - docker build -t github_stats .
+    - location: deployemnt/dockerbuild.sh
