--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ files:
     destination: /home/ec2-user
 hooks:
   BeforeInstall:
-    - location: /home/ec2-user/dockerbuild.sh
-      timeout: 1200
+    - location: dockerbuild.sh
+      timeout: 30
       runas: root
