--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,6 @@ files:
   - source: .
     destination: /home/ec2-user
 hooks:
-  BeforeInstall:
-    - location: /dockerbuild.sh
+  ApplicationStart:
+    - location: deployment/dockerbuild.sh
       timeout: 30
-      runas: root
